--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
   },
   "dependencies": {
     "del": "^1.2.1",
+    "express": "^4.13.3",
     "extend": "^3.0.0",
     "fs-extra": "^0.23.1",
     "gulp": "^3.9.0",
     "gulp-csslint": "^0.1.5",
     "gulp-jsxcs": "^0.1.9",
+    "gulp-less": "^3.0.3",
+    "gulp-rename": "^1.2.2",
     "gulp-watch": "^4.3.4",
-    "md5": "^2.0.0",
-    "express": "^4.13.3"
+    "md5": "^2.0.0"
   },
   "devDependencies": {},
   "scripts": {
