--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-jsxcs": "^0.1.9",
     "gulp-less": "^3.0.3",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.1.0",
     "gulp-watch": "^4.3.4",
     "md5": "^2.0.0"
   },
