--- a/package.json
+++ b/package.json
@@ -1,24 +1,12 @@
 {
   "name": "cody-cli",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Frontend web development server for modern web apps",
   "main": "./bin/cody.js",
   "bin": {
-    "cody-cli": "cody.js"
+    "cody": "./bin/cody.js"
   },
   "dependencies": {
-    "babel-plugin-transform-es2015-arrow-functions": "^6.0.2",
-    "babel-plugin-transform-es2015-block-scoped-functions": "^6.0.2",
-    "babel-plugin-transform-es2015-block-scoping": "^6.0.9",
-    "babel-plugin-transform-es2015-classes": "^6.0.8",
-    "babel-plugin-transform-es2015-computed-properties": "^6.0.2",
-    "babel-plugin-transform-es2015-constants": "^6.0.2",
-    "babel-plugin-transform-es2015-destructuring": "^6.0.2",
-    "babel-plugin-transform-es2015-for-of": "^6.0.2",
-    "babel-plugin-transform-es2015-function-name": "^6.0.2",
-    "babel-plugin-transform-es2015-literals": "^6.0.2",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.0.12",
-    "babel-plugin-transform-runtime": "^6.0.2",
     "babel-preset-es2015": "^6.0.12",
     "babel-preset-react": "^6.0.12",
     "del": "^1.2.1",
@@ -26,7 +14,6 @@
     "extend": "^3.0.0",
     "fs-extra": "^0.23.1",
     "gulp": "^3.9.0",
-    "gulp-6to5": "^3.0.0",
     "gulp-babel": "^6.0.0",
     "gulp-csslint": "^0.1.5",
     "gulp-jsxcs": "^0.1.9",
